--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
     <div class="video-overlay"></div>
     <!-- Container -->
     <div class="container">
-    
+        <h1>Create a Custom Countdown!</h1>       
+        <form class="form" id="countdownForm">
+            <label for="title">Title</label>
+            <input type="text" id="title" placeholder="What are you counting down to?">
+            <label for="date-picker">Select a Date</label>
+            <input type="date" id="date-picker">
+            <button type="submit">Submit</button>
+        </form>
     </div>
     <!-- Script -->
     <script src="script.js"></script>
